tests/samples/positive/functions/method_two_phase_receiver.ax
module method_two_phase_receiver;

struct Counter {
    value: i32;
}

impl Counter {
    fn add(self: &mut Counter, delta: i32) -> i32 {
        self.value = self.value + delta;
        return self.value;
    }

    fn read(self: &Counter) -> i32 {
        return self.value;
    }
}

fn main() -> i32 {
    var counter = Counter { value: 21 };
    return counter.add(counter.read()) - 42;
}
