tests/samples/negative/modules/unknown_module_type_path.ax
module unknown_module_type_path;

fn main() -> i32 {
    let value: missing.path.File = 0;
    return value;
}
